--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2024"
 [dependencies]
 futures = "0.3.31"
 ntest = "0.9.3"
+priority-queue = "2.7.0"
 thiserror = "2.0.17"
+rand = "0.10.0-rc.5"
